--- a/style.css
+++ b/style.css
@@ -1,5 +1,18 @@
+@font-face {
+  font-family: clock;
+  src: url("./digital-7/digital-7.ttf");
+}
+
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: clock;
+}
+
+body {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
 }
